server: fix rendering on mobile

--- a/static-files/css/haskbike.css
+++ b/static-files/css/haskbike.css
@@ -159,3 +159,31 @@ body {
 .station-list-input-column {
   text-align: left;
 }
+
+@media screen and (max-width: 800px) {
+  * {
+    font-size: small;
+  }
+  .empty-full-table {
+        display: none !important;
+  }
+  #station-list-table-too-small {
+        display: inherit !important;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .empty-full-table {
+    min-width: 1200px;
+  }
+}
+
+@media screen and (min-width: 800px) and (orientation:landscape) {
+  .station-list-table {
+    width: 1600px;
+    overflow: scroll;
+  }
+  .empty-full-table {
+    width: 1600px;
+  }
+}
